# xoe-core

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build  xoe-core.sublime-project  xoe-core.sublime-workspace
subprojects/: hwy.wrap
xoe-core/: meson.build
xoe-core-demo/: meson.build
xoe-core-demo/source/: main.cpp
xoe-core-tests/: meson.build
xoe-core-tests/source/: TestString.cpp  test-core-types.cpp
xoe-core/private/: Assert.cpp  BasicTypes.cpp  Init.cpp  String.cpp  core-types.cpp
xoe-core/public/xoe-core/: Assert.hpp  BasicTypes.hpp  Init.hpp  String.hpp  core-types.hpp
xoe-core/public/xoe-core-impl/: constexpr-xxh3.h
